# sqli

./: README.md  pyproject.toml
sqli/: sqli.py  sqli.pyi
